# glg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  make_externals.bat  make_tests.bat
cmake/: FindDOCTEST.cmake  FindGLM.cmake
glg/: CMakeLists.txt
glg/algorithm/: nsphere.hpp
glg/geometry/: circle.hpp  nsphere.hpp  sphere.hpp
test/: CMakeLists.txt  main.cpp
test/algorithm/: nsphere.cpp
test/geometry/: circle.cpp  sphere.cpp
